# metronome

./: Cargo.toml  LICENSE  README.md  dist-workspace.toml
src/: app.rs  audio.rs  cli.rs  main.rs  tap.rs  tempo.rs  ui.rs
