[package]
name = "metronome"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Simple CLI metronome"
readme = "README.md"
repository = "https://github.com/junhsss/metronome"
homepage = "https://github.com/junhsss/metronome"
license = "MIT"
keywords = ["metronome", "audio", "tui", "cli", "music"]
categories = ["command-line-utilities", "multimedia::audio"]
authors = ["junhsss <junhsssr@gmail.com>"]
default-run = "metronome"

[package.metadata.wix]
upgrade-guid = "B0FEFB18-FFC4-48C6-ADF6-372B2739B378"
path-guid = "81B8EF3C-A142-48D1-B3B3-375758BB83D0"
license = false
eula = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
rodio = "0.17"
ctrlc = "3.4"
unicode-width = "0.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
